account management created

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   },
   "devDependencies": {
     "cypress": "^8.6.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.3",
+    "next": "^12.1.0"
   }
 }
